--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@
 
 # Inverse ignore some stuff
 !/Assets/
-!/ProjectSettings/
-!/VRClubUniverse_Data/
-!.gitignore
+!/ProjectSettings/!.gitignore
 
 # OS Stuff
 .DS_Store
