--- a/Website/package.json
+++ b/Website/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "formidable": "^1.1.1",
     "fs": "0.0.1-security",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
