--- a/Website/package.json
+++ b/Website/package.json
@@ -10,11 +10,13 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-formidable": "^1.0.0",
     "formidable": "^1.1.1",
     "fs": "0.0.1-security",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "util": "^0.10.3"
   }
 }
