--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 # Inverse ignore some stuff
 !/Assets/
 !/ProjectSettings/!.gitignore
-!VRUniverse_Helper.bat
+!VRUniverse_Helper.*
 
 # OS Stuff
 .DS_Store
