Updated Orbit Manager
Revert "Merge remote-tracking branch 'refs/remotes/origin/master' into spaceshipMovement"

This reverts commit 5b68335e201cf359c92912a47f0e44cb8c559b37, reversing
changes made to a77fb844a913c381dc43030ea5fbab87d68b95de.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 # Inverse ignore some stuff
 !/Assets/
 !/ProjectSettings/!.gitignore
-!VRUniverse_Helper.*
+!VRUniverse_Helper.bat
 
 # OS Stuff
 .DS_Store
