--- a/Website/package.json
+++ b/Website/package.json
@@ -25,6 +25,7 @@
     "save": "^2.3.2",
     "serve-favicon": "~2.4.2",
     "sqlite3": "^3.1.13",
+    "unzip": "^0.1.11",
     "util": "^0.10.3"
   }
 }
