--- a/Website/package.json
+++ b/Website/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -27,5 +27,8 @@
     "sqlite3": "^3.1.13",
     "unzip": "^0.1.11",
     "util": "^0.10.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.3"
   }
 }
