--- a/Website/package.json
+++ b/Website/package.json
@@ -18,9 +18,11 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.0.0",
     "express-ws": "^3.0.0",
+    "file-saver": "1.3.8",
     "fs": "0.0.1-security",
     "glob": "^7.1.2",
     "jade": "~1.11.0",
+    "jszip": "^3.1.5",
     "mongoose": "^5.0.1",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
