--- a/Website/package.json
+++ b/Website/package.json
@@ -7,14 +7,14 @@
   },
   "dependencies": {
     "@octokit/rest": "^15.2.7",
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.18.3",
     "bootstrap": "3.3.7",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.9.0",
     "debug": "~2.6.3",
     "dotenv": "^5.0.1",
-    "express": "~4.15.2",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.0",
     "express-ws": "^3.0.0",
@@ -24,7 +24,7 @@
     "jade": "~1.11.0",
     "jszip": "^3.1.5",
     "mongoose": "^5.0.1",
-    "morgan": "~1.8.1",
+    "morgan": "^1.9.1",
     "multer": "^1.3.0",
     "node-fs-extra": "^0.8.2",
     "passport": "^0.4.0",
@@ -41,7 +41,7 @@
     "ws": "^5.1.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.23.7",
+    "browser-sync": "^2.26.3",
     "gulp": "^3.9.1",
     "gulp-if": "^2.0.2",
     "gulp-nodemon": "^2.2.1",
